Change store name in index.html
Updated the store name from 'Brass Blessing' to 'Sharma Brass Engrevar'.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Top Bar -->
     <div class="top-bar">
-        Welcome to Brass Blessing Store →
+        Welcome to Sharma Brass Engrevar Store →
     </div>
 
     <!-- Header -->
@@ -181,3 +181,4 @@
 
 </body>
 </html>
+
